--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "debug": "^3.1.0",
     "express": "^4.16.3",
+    "kinvey-node-sdk": "^3.11.4",
     "multer": "^1.3.1",
     "nodemon": "^1.18.2"
   }
