--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "debug": "^3.1.0",
     "express": "^4.16.3",
     "kinvey-node-sdk": "^3.11.4",
